--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,8 +5,7 @@
 
 <div class="content body">
 
-	<section id="category">
-		<button class="btn btn-primary btn-flat" onclick="toggleCategoryForm()">Toggle Category</button>
+	<section id="category">		
 
 		<%= form_for :entry, url: category_entries_path(@category), :html => {id: "form-entry", class: "form-horizontal", style: ""} do |f| %>
 		<div class="form-group">
@@ -15,11 +14,15 @@
 		</div>
 		<div class="form-group">
 			<%= f.label :date %>
-			<%= f.text_field :date, class: 'form-control' %>
+			<%= f.text_field :date, class: 'form-control date' %>
 		</div>
 		<div class="form-group">
 			<%= f.label :value %>
 			<%= f.text_field :value, class: 'form-control' %>
+		</div>
+		<div class="form-group">
+			<%= f.label :expense%>
+			<%= f.check_box :expense,  :html => { checked: "checked" } %>
 		</div>
 		<div class="form-group">
 			<%= f.submit "Create", :class => "btn btn-success" %>
