created menu and logout page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,3 +10,13 @@ margin: 1em;
 text-align: center;
 font-weight: bold;
 }
+
+.page-wrapper{
+width: 500px;
+margin: auto;
+border: 1px solid #ccc;
+background-color: rgba(255,255,255, 10);
+height: 800px;
+margin-top: 3em;
+padding: 2em;
+}
